# src

./: README.md
robix_controller/: CMakeLists.txt  package.xml
robix_controller/config/: joy_teleop.yaml
robix_controller/launch/: controller.launch.py  joystick_teleop.launch.py
robix_controller/robix_controller/: simple_controller.py
robix_description/: CMakeLists.txt  package.xml
robix_description/launch/: display.launch.py  first.launch.py
robix_description/rviz/: display.rviz
robix_description/urdf/: robix.urdf.xacro  robix_ros2_control.xacro
robix_firmware/: CMakeLists.txt  package.xml  robix_interface.xml
robix_firmware/include/robix_firmware/: robix_interface.hpp
robix_firmware/launch/: hardware_interface.launch.py
robix_firmware/robix_firmware/: enco_to_odom_to_tf.py  encoder_mas_imu_node.py  odometry_publisher.py  simple_serial_transmitter.py  tf_transmitter.py  velocidad_ruedas_publisher.py
robix_firmware/src/: robix_interface.cpp
robix_localization/: CMakeLists.txt  package.xml
robix_localization/config/: ekf.yaml
robix_localization/launch/: localization.py
robix_slam/: CMakeLists.txt  package.xml
robix_slam/launch/: online_async_launch.py
